// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/shipping-tpls form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/shipping-tpls/defaults",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "/api/regions?virtual=0&parentId=%E4%B8%AD%E5%9B%BD&expand=children",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/shipping-tpls form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/shipping-tpls/defaults",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "/api/regions?virtual=0&parentId=%E4%B8%AD%E5%9B%BD&expand=children",
      },
    ],
    Array [
      Object {
        "data": Object {
          "id": undefined,
          "isFreeShipping": undefined,
          "name": "测试",
          "rules": Array [
            Object {
              "addAmount": 3,
              "addFee": 4,
              "id": 1,
              "isDefault": true,
              "regionIds": Array [],
              "serviceId": 1,
              "startAmount": 1,
              "startFee": 2,
            },
            Object {
              "addAmount": 3,
              "addFee": 4,
              "id": 2,
              "isDefault": false,
              "regionIds": Array [
                1,
              ],
              "serviceId": 1,
              "startAmount": 1,
              "startFee": 2,
            },
          ],
          "sort": 50,
          "valuationType": undefined,
        },
        "loading": true,
        "method": "POST",
        "url": "/admin-api/shipping-tpls",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
